# toy_agent

./: README.md  pyproject.toml
notebooks/: env_testing.ipynb
src/: Grid.py  WorldEnviroment.py  __main__.py
src/grids/: grid1.txt
src/toy_agent/: Grid.py  WorldEnviroment.py  agent.py  main.py  utils.py
src/toy_agent/grids/: grid2.txt  test_grid.txt
tests/: test_toy_agent.py
tests/Enviroment/: test_env.py
tests/Grid/: test_grid.py
tests/MDP/: test_pymdp.py
