[tool.poetry]
name = "toy_agent"
version = "0.1.0"
description = "A practice active inference agent to solve a simple maze problem in a 9x9 grid."
authors = ["zschaller27 <zschaller27@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.21.1"
matplotlib = "^3.4.3"
seaborn = "^0.11.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
