[tool.poetry]
name = "toy_agent"
version = "0.1.0"
description = "Toy Active Inference Agent for Maze Solving"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9,<3.10"
numpy = "^1.21.2"
pytest = "^6.2.4"
pandas = "^1.3.2"
matplotlib = "^3.4.3"
scipy = "^1.7.1"
inferactively-pymdp = "^0.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
